# g-gremlin-hubspot-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: cursor_mcp.json
src/g_gremlin_hubspot_mcp/: __init__.py  artifacts.py  envelope.py  runner.py  server.py
src/g_gremlin_hubspot_mcp/tools/: __init__.py  analyze.py  mutate.py  read.py
tests/: conftest.py  test_envelope.py  test_runner.py  test_server.py  test_tools_analyze.py  test_tools_mutate.py  test_tools_read.py
tests/golden/: doctor.json  merge_plan.json  schema_ls.json  whoami.json
