[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "g-gremlin-hubspot-mcp"
version = "0.1.0"
description = "HubSpot MCP server powered by g-gremlin — breaks the 10k ceiling, dedup merge plans, schema management, and more."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "FoundryOps" }]
keywords = ["hubspot", "mcp", "crm", "g-gremlin", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
g-gremlin-hubspot-mcp = "g_gremlin_hubspot_mcp.server:main"

[project.urls]
Homepage = "https://github.com/foundryops/g-gremlin-hubspot-mcp"
Issues = "https://github.com/foundryops/g-gremlin-hubspot-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/g_gremlin_hubspot_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
